# VisionAlgorithm

./: README.md
2.1 距离变换/: CMakeLists.txt  Readme.md  dist_abc.cpp  dist_binaryzation.cpp  dist_byVector.cpp  dist_center.cpp  distrans.cpp
2.2 直方图和均值化/: CMakeLists.txt  Makefile  Readme.md  equalizeHist  equalizeHist.cpp  equalizeHist2  equalizeHist2.cpp  equalizeHist_byMat  equalizeHist_byMat.cpp  histogram1  histogram1.cpp  histogramBGR  histogramBGR.cpp  histogramMatch  histogramMatch.cpp  logBGR.txt  normalize  normalize.cpp  normalizeImage  normalizeImage.cpp
